crates/benday-core/tests/snapshots/corpus__case__declared_date_ordinal.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
{
  "size": {
    "columns": 62,
    "rows": 12
  },
  "plot": {
    "x": 2,
    "y": 0,
    "w": 60,
    "h": 10
  },
  "chrome": {
    "axis": "#6a707a",
    "title": "#dee2e8"
  },
  "title": null,
  "legend": [],
  "y_axis": {
    "domain": [
      2.0,
      8.0
    ],
    "step": 1.0,
    "ticks": [
      {
        "value": 2.0,
        "frac": 0.0,
        "label": "2",
        "row": 9
      },
      {
        "value": 3.0,
        "frac": 0.16666666666666666,
        "label": "3",
        "row": 8
      },
      {
        "value": 4.0,
        "frac": 0.3333333333333333,
        "label": "4",
        "row": 6
      },
      {
        "value": 5.0,
        "frac": 0.5,
        "label": "5",
        "row": 5
      },
      {
        "value": 6.0,
        "frac": 0.6666666666666666,
        "label": "6",
        "row": 3
      },
      {
        "value": 7.0,
        "frac": 0.8333333333333334,
        "label": "7",
        "row": 1
      },
      {
        "value": 8.0,
        "frac": 1.0,
        "label": "8",
        "row": 0
      }
    ]
  },
  "x_axis": {
    "categories": [
      "2024-01-01",
      "2024-02-01",
      "2024-03-01"
    ],
    "domain": null,
    "tick_cols": [
      0,
      30,
      59
    ],
    "labels": [
      {
        "text": "2024-01-01",
        "col": 0,
        "row": 11
      },
      {
        "text": "2024-02-01",
        "col": 27,
        "row": 11
      },
      {
        "text": "2024-03-01",
        "col": 52,
        "row": 11
      }
    ]
  },
  "marks": [
    {
      "Path": {
        "series": {
          "name": null,
          "color": "#00d5ef"
        },
        "points": [
          [
            0.0,
            1.0
          ],
          [
            0.5,
            0.0
          ],
          [
            1.0,
            0.5
          ]
        ]
      }
    }
  ],
  "dropped_rows": 0,
  "source": {
    "mark": "line",
    "x_field": "d",
    "y_field": "v",
    "aggregate": null,
    "series_points": [
      3
    ]
  }
}
