crates/benday-core/tests/snapshots/corpus__case__err_agg_on_category.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): aggregation runs over the quantitative channel, grouped by the categorical one; put `aggregate` on encoding.y
