crates/benday-core/tests/snapshots/corpus__case__err_aggregate_on_x.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): `aggregate` on encoding.x is not supported; aggregation runs over y, grouped by x
