crates/benday-core/tests/snapshots/corpus__case__err_bar_negative.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (data): negative values are not yet supported for mark "bar"; use mark "line"
