crates/benday-core/tests/snapshots/corpus__case__err_bar_quant_x.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): bar marks treat x as categorical; omit encoding.x.type, or use mark "line" or "area" for a quantitative x
