crates/benday-core/tests/snapshots/corpus__case__err_bar_temporal_no_timeunit.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): bars need discrete time buckets; add `"timeUnit": "day"` (or week/month/…) — or use `line`/`point` for continuous time
