crates/benday-core/tests/snapshots/corpus__case__err_bin_and_timeunit.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): `bin` and `timeUnit` cannot both apply to encoding.x — one transform per channel; `bin` groups quantitative values and `timeUnit` buckets time, so pick one
