crates/benday-core/tests/snapshots/corpus__case__err_bin_maxbins_and_step.snap
---
source: crates/benday-core/tests/corpus.rs
expression: snapshot
---
ERROR (spec): `bin` cannot set both `maxbins` and `step` — they fight over the bin width; pick one
